--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>蛋仔帝国网站导览</title>
 </head>
 <body>
-    <h1>我的第一个标题</h1>
-    <p>我的第一个段落。</p>
+    <h1>蛋仔帝国网站导览</h1>
+    <a href="https://www.old-six-x.github.io/GFB">囯防部网站</a>
 </body>
 </html>
