--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>蛋仔帝国网站导览</h1>
-    <a href="https://www.old-six-x.github.io/GFB">囯防部网站</a>
+    <a href="https://old-six-x.github.io/GFB/">囯防部网站</a>
 </body>
 </html>
