--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>蛋仔帝国网站导览</title>
+    <meta charset="utf-8">
+    <title>蛋仔帝国网站导览</title>
 </head>
-<body>
+<body background="https://cdn.yiranlaoshi.com/video/1752554772007-IMG_5443.jpeg">
     <h1>蛋仔帝国网站导览</h1>
     <a href="https://old-six-x.github.io/GFB/">囯防部网站</a>
 </body>
