--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>蛋仔帝国网站导览</title>
 </head>
-<body background="https://cdn.yiranlaoshi.com/video/1752554772007-IMG_5443.jpeg">
+<body background="https://cdn.yiranlaoshi.com/video/1752554772007-IMG_5443.jpeg" width="500" height="310">
     <h1>蛋仔帝国网站导览</h1>
     <a href="https://old-six-x.github.io/GFB/">囯防部网站</a>
 </body>
