--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>蛋仔帝国网站导览</title>
+    <title>蛋意志联邦共和国网站导览</title>
 </head>
 <body background="https://cdn.yiranlaoshi.com/video/1752554772007-IMG_5443.jpeg" width="500" height="310">
-    <h1>蛋仔帝国网站导览</h1>
+    <h1>蛋意志联邦共和国网站导览</h1>
     <a href="https://old-six-x.github.io/GFB/">囯防部网站</a>
+    <a href="https://old-six-x.github.io/eggygoverment/">联邦政府网站</a>
 </body>
 </html>
